styling and yelp camp

--- a/index.html
+++ b/index.html
@@ -32,46 +32,47 @@
 			<li><a href="https://github.com/raphsutti"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
 		</ul>
 	</header>
-	<div class="grid">
-		<div id="profile">
-			<img src="./img/profile.jpg" alt="">
-		</div>
-		<div id="linked">
-			<img src="./img/linked.jpg" alt="">
-		</div>
+	<div class="container">
+		<div id="profile"><img src="./img/profile.jpg" alt=""></div>
+		<div id="linked"><img src="./img/linked.jpg" alt=""></div>
+	</div>
+	<div class="container">
 		<section id="about">
-			<!-- <h2>About Me</h2> -->
 			<p>I'm a Junior Full Stack Developer and I love to code. I volunteer teaching kids how to code and I enjoy creating websites and learning about programming</p>
 			<p>I've completed <a href="https://www.freecodecamp.org/raphsutti/front-end-certification">Front End Developer certification</a> with FreeCodeCamp.org, <a href="https://udemy-certificate.s3.amazonaws.com/image/UC-E1MF2QYK.jpg">Full Stack Development</a> on Udemy and completing Modern React with Redux with Udemy. My stacks are HTML, CSS, JavaScript, JQuery, Bootstrap, Ruby on Rails and some React.</p>
 			<p>I have a keen eye on web designs and I enjoy learning new concepts every day</p>
 			<p>Check out some of my projects below</p>
 		</section>
-		<!-- <div id="spacer"></div> -->
-		<div id="project-banner">Projects</div>
+	</div>
+
+	<div id="project-banner">Projects</div>
+	<div class="grid">
+		
+		<div id="railsblog"><a href="https://murmuring-dawn-66530.herokuapp.com/"><img src="./img/rb.PNG" class="shadow" alt="railsblog"></a></div>
+		<div id="quote"><a href="./quote/index.html"><img src="./img/quote.png" class="shadow" alt="quote"></a></div>
 		<div id="tribute"><a href="./tribute/index.html"><img src="./img/tribute.png" class="shadow" alt="tribute"></a></div>
 		<div id="weather"><a href="./weather/index.html"><img src="./img/weather.png" class="shadow" alt="weather"></a></div>
 		<div id="wiki"><a href="./wiki/index.html"><img src="./img/wiki.png" class="shadow" alt="wiki"></a></div>
-		<div id="quote"><a href="./quote/index.html"><img src="./img/quote.png" class="shadow" alt="quote"></a></div>
 		<div id="calc"><a href="./calc/index.html"><img src="./img/calc.png" class="shadow" alt="calc"></a></div>
 		<div id="pomodoro"><a href="./pomodoro/index.html"><img src="./img/pomodoro.png" class="shadow" alt="pomodoro"></a></div>
-		<div id="menu"><a href="./menu/index.html"><img src="./img/menu.jpg" class="shadow" alt="menu"></a></div>
-		<div id="puppy"><a href="./puppy/index.html"><img src="./img/puppy.jpg" class="shadow" alt="puppy"></a></div>
-		<div id="gallery"><a href="./gallery/index.html"><img src="./img/gallery.png" class="shadow" alt="gallery"></a></div>
 		<div id="colour"><a href="./colour/index.html"><img src="./img/colour.png" class="shadow" alt="colourgame"></a></div>
 		<div id="patatap"><a href="./patatap/index.html"><img src="./img/patatap.PNG" class="shadow" alt="patatap game"></a></div>
-		<div id="book"><a href="./book/index.html"><img src="./img/book.png" class="shadow" alt="book"></a></div>
-		<div id="railsblog"><a href="https://murmuring-dawn-66530.herokuapp.com/"><img src="./img/rb.PNG" class="shadow" alt="railsblog"></a></div>
-		<div id="contact">
-			<p>Let's get in touch</p>
-			<ul class="contact2">
-				<li><a href="https://www.linkedin.com/in/raph-suttiyotin-a384a430"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
-				<li><a href="https://twitter.com/neoster9"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
-				<li><a href="https://github.com/raphsutti"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
-				<li><a href="mailto:r.suttiyotin@gmail.com"><i class="fa fa-envelope-square fa-2x" aria-hidden="true"></i></a></li>
-			</ul>
-		</div>
+		<div id="yelp"><a href="https://mighty-bayou-83924.herokuapp.com/"><img src="./img/yelp.PNG" class="shadow" alt="Yelp Camp"></a></div>
+		
+		<div id="menu"><a href="./menu/index.html"><img src="./img/menu.jpg" class="shadow" alt="menu"></a></div>
+		<div id="puppy"><a href="./puppy/index.html"><img src="./img/puppy.jpg" class="shadow" alt="puppy"></a></div>
 	</div>
-		<footer id="footer">
-			Made by Raphael Suttiyotin 2018. <a href="./v1/index.html">Old landing page</a>
-		</footer>
+
+	<div id="contact">
+		<p>Let's get in touch</p>
+		<ul class="contact2">
+			<li><a href="https://www.linkedin.com/in/raph-suttiyotin-a384a430"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
+			<li><a href="https://twitter.com/neoster9"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
+			<li><a href="https://github.com/raphsutti"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
+			<li><a href="mailto:r.suttiyotin@gmail.com"><i class="fa fa-envelope-square fa-2x" aria-hidden="true"></i></a></li>
+		</ul>
+	</div>
+	<footer id="footer">
+		Made by Raphael Suttiyotin 2018. <a href="./v1/index.html">Old landing page</a>
+	</footer>
 </body>
