Feature: Hover with more info on projects

--- a/index.html
+++ b/index.html
@@ -46,21 +46,121 @@
 	</div>
 
 	<div id="project-banner">Projects</div>
-	<div class="grid">
+
+	<div class="grid">		
+		<div class="grid-element" id="railsblog">
+			<a href="https://murmuring-dawn-66530.herokuapp.com/"><img src="./img/rb.PNG" class="shadow" alt="railsblog">
+				<div class="hidden">
+					<p>Blog Post Application</p>
+					<p>Ruby, Rails, PostgreSQL</p>
+					<p>Features: Create, edit, delete blog posts and comments</p>
+				</div>
+			</a>
+		</div>
 		
-		<div id="railsblog"><a href="https://murmuring-dawn-66530.herokuapp.com/"><img src="./img/rb.PNG" class="shadow" alt="railsblog"></a></div>
-		<div id="quote"><a href="./quote/index.html"><img src="./img/quote.png" class="shadow" alt="quote"></a></div>
-		<div id="tribute"><a href="./tribute/index.html"><img src="./img/tribute.png" class="shadow" alt="tribute"></a></div>
-		<div id="weather"><a href="./weather/index.html"><img src="./img/weather.png" class="shadow" alt="weather"></a></div>
-		<div id="wiki"><a href="./wiki/index.html"><img src="./img/wiki.png" class="shadow" alt="wiki"></a></div>
-		<div id="calc"><a href="./calc/index.html"><img src="./img/calc.png" class="shadow" alt="calc"></a></div>
-		<div id="pomodoro"><a href="./pomodoro/index.html"><img src="./img/pomodoro.png" class="shadow" alt="pomodoro"></a></div>
-		<div id="colour"><a href="./colour/index.html"><img src="./img/colour.png" class="shadow" alt="colourgame"></a></div>
-		<div id="patatap"><a href="./patatap/index.html"><img src="./img/patatap.PNG" class="shadow" alt="patatap game"></a></div>
-		<div id="yelp"><a href="https://mighty-bayou-83924.herokuapp.com/"><img src="./img/yelp.PNG" class="shadow" alt="Yelp Camp"></a></div>
+		<div class="grid-element" id="quote">
+			<a href="./quote/index.html"><img src="./img/quote.png" class="shadow" alt="quote">
+				<div class="hidden">
+					<p>Generate random quotes</p>
+					<p>JavaScript</p>
+				</div>
+			</a>
+		</div>
+
+		<div class="grid-element" id="tribute">
+			<a href="./tribute/index.html"><img src="./img/tribute.png" class="shadow" alt="tribute">
+				<div class="hidden">
+					<p>Tribute Page</p>
+					<p>Bootstrap</p>
+				</div>
+			</a>
+		</div>
+
+		<div class="grid-element" id="weather">
+			<a href="./weather/index.html"><img src="./img/weather.png" class="shadow" alt="weather">
+				<div class="hidden">
+					<p>Local Weather Application</p>
+					<p>AJAX</p>
+				</div>
+			</a>
+		</div>
+
+		<div class="grid-element" id="wiki">
+			<a href="./wiki/index.html"><img src="./img/wiki.png" class="shadow" alt="wiki">
+				<div class="hidden">
+					<p>Wikipedia clone</p>
+					<p>AJAX - Wiki API</p>
+				</div>
+			</a>
+		</div>
+
+		<div class="grid-element" id="calc">
+			<a href="./calc/index.html"><img src="./img/calc.png" class="shadow" alt="calc">
+				<div class="hidden">
+					<p>Calculator</p>
+					<p>JavaScript</p>
+				</div>
+			</a>
+		</div>
+
+		<div class="grid-element" id="pomodoro">
+			<a href="./pomodoro/index.html"><img src="./img/pomodoro.png" class="shadow" alt="pomodoro">
+				<div class="hidden">
+					<p>Pomodoro Timer</p>
+					<p>JavaScript</p>
+				</div>
+			</a>
+		</div>
+
+		<div class="grid-element" id="colour">
+			<a href="./colour/index.html"><img src="./img/colour.png" class="shadow" alt="colourgame">
+				<div class="hidden">
+					<p>RGB Colour Game</p>
+					<p>Guess the colour displayed as RGB</p>
+					<p>JavaScript</p>
+					<p>Event handler</p>
+				</div>
+			</a>
+		</div>
+
+		<div class="grid-element" id="patatap">
+			<a href="./patatap/index.html"><img src="./img/patatap.PNG" class="shadow" alt="patatap game">
+				<div class="hidden">
+					<p>Patatap Clone</p>
+					<p>Make music with your key press</p>
+					<p>JavaScript</p>
+					<p>PaperJS library</p>
+				</div>
+			</a>
+		</div>
+
+		<div class="grid-element" id="yelp">
+			<a href="https://mighty-bayou-83924.herokuapp.com/"><img src="./img/yelp.PNG" class="shadow" alt="Yelp Camp">
+				<div class="hidden">
+					<p>Yelp Camp Application</p>
+					<p>NodeJS, Express, MongoDB, Passport authentication</p>
+					<p>Features: Sign up, Log in, add/edit/remove campgrounds or comments</p>
+				</div>
+			</a>
+		</div>
 		
-		<div id="menu"><a href="./menu/index.html"><img src="./img/menu.jpg" class="shadow" alt="menu"></a></div>
-		<div id="puppy"><a href="./puppy/index.html"><img src="./img/puppy.jpg" class="shadow" alt="puppy"></a></div>
+		<div class="grid-element" id="menu">
+			<a href="./menu/index.html"><img src="./img/menu.jpg" class="shadow" alt="menu">
+				<div class="hidden">
+					<p>Typical Restaurant</p>
+					<p>HTML, CSS, JS</p>
+				</div>
+			</a>
+		</div>
+		
+		<div class="grid-element" id="puppy">
+			<a href="./puppy/index.html"><img src="./img/puppy.jpg" class="shadow" alt="puppy">
+				<div class="hidden">
+					<p>Typical landing page</p>
+					<p>Bootstrap</p>
+				</div>
+			</a>
+		</div>
 	</div>
 
 	<div id="contact">
