--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
 	</header>
 	<div class="container">
 		<div id="profile"><img src="./img/profile.jpg" alt=""></div>
+		<div id="lesson"><img src="./img/lesson.jpg" alt=""></div>
+		<div id="cc"><img src="./img/cc.jpg" alt=""></div>
 		<div id="linked"><img src="./img/linked.jpg" alt=""></div>
 	</div>
 	<div class="container">
 		<section id="about">
 			<p>I'm a Junior Full Stack Developer and I love to code. I volunteer teaching kids how to code and I enjoy creating websites and learning about programming</p>
-			<p>I've completed <a href="https://www.freecodecamp.org/raphsutti/front-end-certification">Front End Developer certification</a> with FreeCodeCamp.org, <a href="https://udemy-certificate.s3.amazonaws.com/image/UC-E1MF2QYK.jpg">Full Stack Development</a> on Udemy and completing Modern React with Redux with Udemy. My stacks are HTML, CSS, JavaScript, JQuery, Bootstrap, Ruby on Rails and some React.</p>
+			<p>I've completed <a href="https://www.freecodecamp.org/raphsutti/front-end-certification">Front End Developer certification</a> with FreeCodeCamp.org, <a href="https://udemy-certificate.s3.amazonaws.com/image/UC-E1MF2QYK.jpg">Full Stack Development</a> on Udemy and completing Modern React with Redux with Udemy. I'm familiar with HTML, CSS, JavaScript, JQuery, Bootstrap, Ruby on Rails and some React.</p>
 			<p>I have a keen eye on web designs and I enjoy learning new concepts every day</p>
 			<p>Check out some of my projects below</p>
 		</section>
