--- a/v1/index.html
+++ b/v1/index.html
@@ -21,8 +21,6 @@
 	<!-- CSS style sheet -->
 	<link rel="stylesheet" href="style.css">
 	
-	<!-- Live reload -->
-	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
 <body>
 	<nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
@@ -58,7 +56,7 @@
 			<a id="about-link"></a>
 			<div class="row">
 		        <div class="col-sm-12 col-lg-4">
-		        	<img src="https://media-exp1.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAArzAAAAJDUzNGEwNDI2LTczYmYtNDU5Yi04MzNmLTRiNjU2MTdjNGU3OA.jpg" alt="" />
+		        	<img src="../img/profile.jpg" alt="" />
 		        </div>
 		        <div class="col-sm-12 col-lg-8">
 		        	<p>I'm an experienced Mechanical / Electrical Engineer with coding skills gain through self teaching programming during my free time.</p> 
