update description and keywords

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<!-- <meta name="viewport" content="width=device-width,"> -->
-	<meta name="description" content="front end developer portfolio">
-	<meta name="keywords" content="web design, front end developer, melbourne">
+	<meta name="description" content="Full Stack Developer Portfolio">
+	<meta name="keywords" content="web design, front end developer, full stack developer, melbourne">
 	<meta name="author" content="Raphael Suttiyotin">
 	<title>Raphael Suttiyotin | Portfolio</title>
 	
