--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 	<header id="header">
 		<h1>Raphael Suttiyotin</h1>
-		<h2>Project Engineer</h2>
+		<h2>Mechanical Engineer</h2>
 		<ul class="social">
 			<li><a href="https://www.linkedin.com/in/raph-suttiyotin-a384a430"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
 			<li><a href="https://twitter.com/neoster9"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
@@ -40,10 +40,9 @@
 	</div>
 	<div class="container">
 		<section id="about">
-			<p>I'm a Project Engineer and I love to code. I volunteer teaching kids how to code and I enjoy creating websites and learning about programming</p>
+			<p>I'm a Mechanical Engineer and I love to code. I am pursuing Masters degree in IT majoring in infosec. I volunteer teaching kids how to code and I enjoy creating websites and learning about programming</p>
 			<p>I've completed <a href="https://www.freecodecamp.org/raphsutti/front-end-certification">Front End Developer certification</a> with FreeCodeCamp.org, <a href="https://udemy-certificate.s3.amazonaws.com/image/UC-E1MF2QYK.jpg">Full Stack Development</a> on Udemy and completing Modern React with Redux with Udemy. I'm familiar with HTML, CSS, JavaScript, JQuery, Bootstrap, Ruby on Rails and some React.</p>
-			<p>I have a keen eye on web designs and I am open to freelance projects</p>
-			<p>Check out some of my projects below</p>
+			<p>Check out some of my webpages/apps below</p>
 		</section>
 	</div>
 
