--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 	<header id="header">
 		<h1>Raphael Suttiyotin</h1>
-		<h2>Junior Security Analyst / Ex-Mechanical Engineer</h2>
+		<h2>Junior Security Analyst</h2>
 		<h3>"Security is always seen as too much until the day it is not enough" - William Webster</h3>
 		<ul class="social">
 			<li><a href="https://www.linkedin.com/in/raph-suttiyotin-a384a430"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
