--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div id="profile"><img src="./img/profile.jpg" alt=""></div>
 		<div id="lesson"><img src="./img/lesson.jpg" alt=""></div>
 		<div id="cc"><img src="./img/cc.jpg" alt=""></div>
-		<div id="linked"><img src="./img/push.jpg" alt=""></div>
+		<div id="linked"><img src="./img/push.JPG" alt=""></div>
 	</div>
 	<div class="container">
 		<section id="about">
