update linkedin address

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<h2>Junior Security Analyst</h2>
 		<h3>"Security is always seen as too much until the day it is not enough" - William Webster</h3>
 		<ul class="social">
-			<li><a href="https://www.linkedin.com/in/raph-suttiyotin-a384a430"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/raph-s-a384a430/"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
 			<li><a href="https://twitter.com/neoster9"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
 			<li><a href="https://github.com/raphsutti"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
 		</ul>
@@ -168,7 +168,7 @@
 	<div id="contact">
 		<p>Let's get in touch</p>
 		<ul class="contact2">
-			<li><a href="https://www.linkedin.com/in/raph-suttiyotin-a384a430"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/raph-s-a384a430/"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
 			<li><a href="https://twitter.com/neoster9"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
 			<li><a href="https://github.com/raphsutti"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
 			<li><a href="mailto:r.suttiyotin@gmail.com"><i class="fa fa-envelope-square fa-2x" aria-hidden="true"></i></a></li>
