Allow input of the question into individual squares

--- a/wordGame/word.html
+++ b/wordGame/word.html
@@ -4,20 +4,25 @@
   </head>
   <body>
     <h1>Word game</h1>
-    <div>
-      <div id="1" class="box"></div>
-      <div id="2" class="box"></div>
-      <div id="3" class="box"></div>
+    <div class="outer">
+      <div id="block1" class="square">1</div>
+      <div id="block2" class="square">2</div>
+      <div id="block3" class="square">3</div>
+    </div>
+    <div class="outer">
+      <div id="block4" class="square">4</div>
+      <div id="block5" class="square">5</div>
+      <div id="block6" class="square">6</div>
+    </div>
+    <div class="outer">
+      <div id="block7" class="square">7</div>
+      <div id="block8" class="square">8</div>
+      <div id="block9" class="square">9</div>
     </div>
     <div>
-      <div id="4" class="box"></div>
-      <div id="5" class="box"></div>
-      <div id="6" class="box"></div>
+      <textarea id="input"></textarea>
+      <button id="update">Input question</button>
     </div>
-    <div>
-      <div id="7" class="box"></div>
-      <div id="8" class="box"></div>
-      <div id="9" class="box"></div>
-    </div>
+    <script src="word.js"></script>
   </body>
 </html>
