Add answer field

--- a/wordGame/word.html
+++ b/wordGame/word.html
@@ -4,6 +4,10 @@
   </head>
   <body>
     <h1>Word game</h1>
+    <div>
+      <textarea id="input" placeholder="Input question"></textarea>
+      <button id="update">Submit</button>
+    </div>
     <div class="outer">
       <div id="block1" class="square">1</div>
       <div id="block2" class="square">2</div>
@@ -20,8 +24,7 @@
       <div id="block9" class="square">9</div>
     </div>
     <div>
-      <textarea id="input"></textarea>
-      <button id="update">Input question</button>
+      <textarea id="answer" placeholder="answer"></textarea>
     </div>
     <script src="word.js"></script>
   </body>
