Enable display of answers input in an array

--- a/wordGame/word.html
+++ b/wordGame/word.html
@@ -25,6 +25,7 @@
     </div>
     <div>
       <textarea id="answer" placeholder="answer"></textarea>
+      <p id="displayAnswer"></p>
     </div>
     <script src="word.js"></script>
   </body>
