Limit input length to 9

--- a/wordGame/word.html
+++ b/wordGame/word.html
@@ -5,7 +5,11 @@
   <body>
     <h1>Word game</h1>
     <div>
-      <textarea id="input" placeholder="Input question"></textarea>
+      <textarea
+        id="input"
+        placeholder="Input question"
+        maxlength="9"
+      ></textarea>
       <button id="update">Submit</button>
     </div>
     <div class="outer">
