Enable delete of guessed characters

--- a/wordGame/word.html
+++ b/wordGame/word.html
@@ -8,27 +8,30 @@
       <textarea
         id="input"
         placeholder="Input question"
-        maxlength="9"
+        maxlength="12"
       ></textarea>
-      <button id="update">Submit</button>
+      <button id="start">Start</button>
     </div>
     <div class="outer">
       <div id="block1" class="square">1</div>
       <div id="block2" class="square">2</div>
+      <div id="block3" class="square">3</div>
       <div id="block3" class="square">3</div>
     </div>
     <div class="outer">
       <div id="block4" class="square">4</div>
       <div id="block5" class="square">5</div>
       <div id="block6" class="square">6</div>
+      <div id="block6" class="square">6</div>
     </div>
     <div class="outer">
       <div id="block7" class="square">7</div>
       <div id="block8" class="square">8</div>
       <div id="block9" class="square">9</div>
+      <div id="block9" class="square">9</div>
     </div>
     <div>
-      <textarea id="answer" placeholder="answer"></textarea>
+      <textarea id="answer" placeholder="answer" maxlength="12"></textarea>
       <p id="displayAnswer"></p>
     </div>
     <script src="word.js"></script>
