--- a/wordGame/word.html
+++ b/wordGame/word.html
@@ -16,22 +16,22 @@
       <button id="start">Start</button>
     </div>
     <div class="outer">
-      <div id="block1" class="square">1</div>
-      <div id="block2" class="square">2</div>
-      <div id="block3" class="square">3</div>
-      <div id="block3" class="square">4</div>
+      <div id="block1" class="square"></div>
+      <div id="block2" class="square"></div>
+      <div id="block3" class="square"></div>
+      <div id="block3" class="square"></div>
     </div>
     <div class="outer">
-      <div id="block4" class="square">5</div>
-      <div id="block5" class="square">6</div>
-      <div id="block6" class="square">7</div>
-      <div id="block6" class="square">8</div>
+      <div id="block4" class="square"></div>
+      <div id="block5" class="square"></div>
+      <div id="block6" class="square"></div>
+      <div id="block6" class="square"></div>
     </div>
     <div class="outer">
-      <div id="block7" class="square">9</div>
-      <div id="block8" class="square">10</div>
-      <div id="block9" class="square">11</div>
-      <div id="block9" class="square">12</div>
+      <div id="block7" class="square"></div>
+      <div id="block8" class="square"></div>
+      <div id="block9" class="square"></div>
+      <div id="block9" class="square"></div>
     </div>
     <div>
       <p id="displayAnswer"></p>
