--- a/wordGame/word.html
+++ b/wordGame/word.html
@@ -4,6 +4,8 @@
   </head>
   <body>
     <h1>Word game</h1>
+    <div id="info"></div>
+
     <div class="outer">
       <div id="block1" class="square"></div>
       <div id="block2" class="square"></div>
