Add congratulations emoticon with 12 characters and remove when not completed

--- a/wordGame/word.html
+++ b/wordGame/word.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
   </head>
   <body>
     <h1>Word game</h1>
@@ -26,6 +27,9 @@
     </div>
     <div>
       <p id="displayAnswer"></p>
+    </div>
+    <div>
+      <p id="yay"></p>
     </div>
     <script src="word.js"></script>
   </body>
