--- a/wordGame/word.html
+++ b/wordGame/word.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Word game</h1>
     <div id="info"></div>
-    <p>Start typing your guesses!</p>
+    <div>Start typing your guesses!</div>
 
     <div class="outer">
       <div id="block1" class="square"></div>
