--- a/wordGame/word.html
+++ b/wordGame/word.html
@@ -7,6 +7,7 @@
     <h1>Word game</h1>
     <div id="info"></div>
     <div>Start typing your guesses!</div>
+    <button id="shuffleButton">Shuffle</button>
 
     <div class="outer">
       <div id="block1" class="square"></div>
