move shuffle button center

--- a/wordGame/word.html
+++ b/wordGame/word.html
@@ -6,8 +6,10 @@
   <body>
     <h1>Word game</h1>
     <div id="info"></div>
-    <div>Start typing your guesses!</div>
-    <button id="shuffleButton">Shuffle</button>
+    <div>
+      Start typing your guesses!
+      <button id="shuffleButton">Shuffle</button>
+    </div>
 
     <div class="outer">
       <div id="block1" class="square"></div>
