--- a/cookie/attacker/attacker.html
+++ b/cookie/attacker/attacker.html
@@ -8,6 +8,7 @@
 <body>
   <h1>Cool cat attacker site</h1>
   <img src='https://media.giphy.com/media/VbnUQpnihPSIgIXuZv/giphy.gif' />
+  <img src='https://media.giphy.com/media/H4DjXQXamtTiIuCcRU/giphy.gif' />
   <iframe src='attacker-frame.html' style='display: none' ></iframe>
 </body>
 </html>
