--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 <body>
 	<header id="header">
 		<h1>Raphael Suttiyotin</h1>
-		<h2>Junior Security Analyst</h2>
-		<h3>"Security is always seen as too much until the day it is not enough" - William Webster</h3>
+		<h2>Software Developer</h2>
 		<ul class="social">
 			<li><a href="https://www.linkedin.com/in/raph-s-a384a430/"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
 			<li><a href="https://twitter.com/raphsutti"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
@@ -41,8 +40,6 @@
 	</div>
 	<div class="container">
 		<section id="about">
-			<p>I am currently working as a Junior Security Analyst. I like all things security.</p>
-			<p>I've completed <a href="https://www.freecodecamp.org/raphsutti/front-end-certification">Front End Developer certification</a> with FreeCodeCamp.org, <a href="https://udemy-certificate.s3.amazonaws.com/image/UC-E1MF2QYK.jpg">Full Stack Development</a> on Udemy and completing Modern React with Redux with Udemy. I'm familiar with HTML, CSS, JavaScript, JQuery, Bootstrap, Ruby on Rails and some React.</p>
 			<p>Check out some of my webpages/apps below</p>
 		</section>
 	</div>
@@ -171,10 +168,8 @@
 			<li><a href="https://www.linkedin.com/in/raph-s-a384a430/"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
 			<li><a href="https://twitter.com/raphsutti"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
 			<li><a href="https://github.com/raphsutti"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
-			<li><a href="mailto:r.suttiyotin@gmail.com"><i class="fa fa-envelope-square fa-2x" aria-hidden="true"></i></a></li>
 		</ul>
 	</div>
 	<footer id="footer">
-		Made by Raphael Suttiyotin 2018. <a href="./v1/index.html">Old landing page</a>
 	</footer>
 </body>
